Fixed issue with the contact form on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -502,9 +502,13 @@ h2 {
   width: 90%;
   margin: 0 auto;
   max-width: 80em;
-  min-height: 100vh;
+  position: relative;
   padding: 20px;
-  margin-bottom: 5rem; }
+  margin-bottom: 5em; }
+  .contact::after {
+    content: '';
+    display: block;
+    clear: both; }
   .contact--title {
     text-align: left;
     margin-top: 1em; }
@@ -523,7 +527,7 @@ h2 {
         font-size: 2.5rem;
         margin-top: -1.5em; } }
   .contact__container {
-    height: 80vh;
+    min-height: 800px;
     background: #ffffff;
     box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
     display: grid;
@@ -1419,7 +1423,7 @@ h2 {
       .quote__container .quote__section {
         width: 50%; } }
     .quote__container .quote__section--quote {
-      font-size: 2.8rem;
+      font-size: 2.6rem;
       letter-spacing: 0.05em;
       color: #A78CE7;
       text-transform: upppercase;
