--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -1,9 +1,11 @@
 
 .contact {
   @include container($max-width: 80em);
-  min-height: 100vh;
+  @include clearfix;
+  // min-height: 100vh;
+  position: relative;
   padding: 20px;
-  margin-bottom: 5rem;
+  margin-bottom: 5em;
 
   &--title {
     text-align: left;
@@ -22,7 +24,7 @@
   }
 
   &__container {
-    height: 80vh;
+    min-height: 800px;
     background: $white;
     box-shadow: 0 15px 50px rgba(0,0,0,0.1);
     display: grid;
