--- a/scss/partials/_quote.scss
+++ b/scss/partials/_quote.scss
@@ -25,7 +25,7 @@
 
 
     &--quote {
-      @include sans-serif($fs: 2.8rem, $color: $main, $ff: $ff-title);
+      @include sans-serif($fs: 2.6rem, $color: $main, $ff: $ff-title);
       line-height: 1.3;
 
       @include mq-xl {
